# PDBHeaderGenerator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: COFFImportLibrary.h  CodeGeneration.h  GeneratedHeaderFile.h  HeaderGenerator.h  HeaderGeneratorConfig.h  TypeDependencyCollector.h
include/AST/: CppDeclarationTree.h  CppTypeDeclaration.h
include/Utils/: DiaUtils.h  MemoryGrowableBuffer.h  StringUtils.h  TextWriter.h  TopoSort.h
resources/: config-libraries.json  config-stdlib.json  config-windows.json
src/: COFFImportLibrary.cpp  CodeGeneration.cpp  GeneratedHeaderFile.cpp  HeaderGenerator.cpp  HeaderGeneratorConfig.cpp  TypeDependencyCollector.cpp  main.cpp
src/AST/: CppDeclarationTree.cpp  CppTypeDeclaration.cpp
src/Utils/: DiaUtils.cpp  MemoryGrowableBuffer.cpp  StringUtils.cpp  TextWriter.cpp
